[!]: fix excerpt block image overflow

--- a/source/css/includes/_posts.styl
+++ b/source/css/includes/_posts.styl
@@ -1,6 +1,7 @@
 .posts
   padding: 2rem
 
+
 .posts-item
   padding: 1.4rem 1rem
   margin: 1rem 0
@@ -58,6 +59,8 @@
     text-size(s-1)
     margin: 2rem 0 0 0
     color: $color-black-3
+    img
+      width: 100%;
 
 .post__tags, .post__date
   position: relative
